using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Algorithm_Dynamics.Core.Models
{
    public class Tag
    {
        public Tag(string name)
        {
            Name = name;
        }
        public int Id { get; set; }
        public string Name { get; set; }

    }
}
